--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <development version="4600" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Demo View Controller-->
@@ -117,7 +118,7 @@
             <objects>
                 <viewController title="Quiz Demo Screen" id="ajk-5j-TJz" customClass="quizDemoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tht-gO-gER">
-                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="A7K-nq-J8T">
@@ -144,13 +145,15 @@
                             <constraint firstItem="N6h-2R-Zdc" firstAttribute="centerX" secondItem="A7K-nq-J8T" secondAttribute="centerX" type="default" id="4Cp-PR-xHu"/>
                             <constraint firstItem="vxT-yg-FW8" firstAttribute="top" secondItem="tht-gO-gER" secondAttribute="top" constant="94" id="7gz-sc-TeT"/>
                             <constraint firstItem="A7K-nq-J8T" firstAttribute="centerX" secondItem="tht-gO-gER" secondAttribute="centerX" type="default" id="Hyq-4s-NVS"/>
+                            <constraint firstItem="A7K-nq-J8T" firstAttribute="top" secondItem="tht-gO-gER" secondAttribute="top" constant="242" id="c0c-B8-cgh"/>
                             <constraint firstItem="A7K-nq-J8T" firstAttribute="centerX" secondItem="vxT-yg-FW8" secondAttribute="centerX" type="default" id="gaV-Bz-Zmz"/>
                             <constraint firstItem="N6h-2R-Zdc" firstAttribute="top" secondItem="A7K-nq-J8T" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="icR-Oy-lKd"/>
-                            <constraint firstItem="A7K-nq-J8T" firstAttribute="centerY" secondItem="tht-gO-gER" secondAttribute="centerY" type="default" id="pZf-D0-b5S"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DCW-tB-Jac"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="A7K-nq-J8T" id="BPT-pI-DRB"/>
+                        <outlet property="loadingStatusLabel" destination="N6h-2R-Zdc" id="Mew-WM-ycP"/>
                         <segue destination="upe-3R-lMd" kind="modal" identifier="showQuizScreen" id="KNA-Gq-Jkg"/>
                     </connections>
                 </viewController>
@@ -177,32 +180,21 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H8C-Au-prY">
                                 <rect key="frame" x="41" y="131" width="240" height="133"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="133" id="KOI-g7-ra4"/>
+                                    <constraint firstAttribute="height" constant="133" type="user" id="KOI-g7-ra4"/>
                                     <constraint firstAttribute="width" constant="240" id="eCn-wW-Q2W"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":quizDescription" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cVp-y3-Hgr">
-                                <rect key="frame" x="98" y="272" width="124" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":quizDescription" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cVp-y3-Hgr">
+                                <rect key="frame" x="5760" y="272" width="288" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="288" type="user" id="cet-sC-r5a"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vpN-0z-Kx9">
-                                <rect key="frame" x="98" y="326" width="126" height="44"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Take This Quiz">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="mNc-65-1rH" kind="modal" identifier="showQuestionScreen" id="i6V-lN-UN9"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ieo-lG-fhO">
-                                <rect key="frame" x="228" y="497" width="76" height="32"/>
+                                <rect key="frame" x="5972" y="497" width="76" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="RIb-5c-lV3"/>
                                     <constraint firstAttribute="width" constant="76" id="eQG-bF-kuc"/>
@@ -219,20 +211,34 @@
                                     <segue destination="ajk-5j-TJz" kind="modal" id="zf7-0S-MRb"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zf6-oH-cmR">
+                                <rect key="frame" x="97" y="342" width="126" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Take This Quiz">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="mNc-65-1rH" kind="modal" identifier="showQuestionScreen" id="aSU-Bg-SJh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="H8C-Au-prY" firstAttribute="top" secondItem="EH8-yy-uaV" secondAttribute="top" constant="131" id="2gN-W8-ycN"/>
-                            <constraint firstAttribute="bottom" secondItem="vpN-0z-Kx9" secondAttribute="bottom" constant="179" id="9fj-c0-Tcz"/>
+                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="trailing" secondItem="ieo-lG-fhO" secondAttribute="trailing" type="default" id="2Bj-NZ-hdd"/>
+                            <constraint firstItem="H8C-Au-prY" firstAttribute="top" secondItem="EH8-yy-uaV" secondAttribute="top" constant="131" type="user" id="2gN-W8-ycN"/>
+                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="trailing" secondItem="EH8-yy-uaV" secondAttribute="trailingMargin" type="user" id="2i5-pA-6YE"/>
+                            <constraint firstItem="H8C-Au-prY" firstAttribute="leading" secondItem="EH8-yy-uaV" secondAttribute="leading" constant="41" id="CVe-qi-JqH"/>
                             <constraint firstItem="VMF-ma-mmP" firstAttribute="top" secondItem="EH8-yy-uaV" secondAttribute="top" constant="94" id="Cr4-Of-6bE"/>
-                            <constraint firstItem="vpN-0z-Kx9" firstAttribute="centerX" secondItem="H8C-Au-prY" secondAttribute="centerX" type="user" id="R1l-5l-zbq"/>
-                            <constraint firstAttribute="centerX" secondItem="VMF-ma-mmP" secondAttribute="centerX" constant="-1" type="user" id="UCk-fy-0BX"/>
-                            <constraint firstAttribute="centerX" secondItem="H8C-Au-prY" secondAttribute="centerX" constant="-1" type="user" id="Ubf-wa-hjb"/>
-                            <constraint firstAttribute="trailing" secondItem="ieo-lG-fhO" secondAttribute="trailing" constant="16" id="Vhj-7U-7z2"/>
+                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="leading" secondItem="EH8-yy-uaV" secondAttribute="leadingMargin" type="user" id="I5B-Nx-ihD"/>
                             <constraint firstAttribute="bottom" secondItem="ieo-lG-fhO" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="d7E-LS-hL9"/>
-                            <constraint firstItem="vpN-0z-Kx9" firstAttribute="leading" secondItem="cVp-y3-Hgr" secondAttribute="leading" type="user" id="ekT-on-UWN"/>
-                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="centerX" secondItem="EH8-yy-uaV" secondAttribute="centerX" type="user" id="iVu-mU-tK7"/>
-                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="top" secondItem="H8C-Au-prY" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="rcc-AL-OCx"/>
+                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="centerX" secondItem="EH8-yy-uaV" secondAttribute="centerX" type="user" id="jrk-F0-i1D"/>
+                            <constraint firstAttribute="centerX" secondItem="zf6-oH-cmR" secondAttribute="centerX" type="user" id="r1X-J9-MjF"/>
+                            <constraint firstItem="cVp-y3-Hgr" firstAttribute="top" secondItem="H8C-Au-prY" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="rcc-AL-OCx"/>
+                            <constraint firstItem="zf6-oH-cmR" firstAttribute="top" secondItem="cVp-y3-Hgr" secondAttribute="bottom" constant="49" type="user" id="seK-fo-9d1"/>
                             <constraint firstItem="VMF-ma-mmP" firstAttribute="centerX" secondItem="H8C-Au-prY" secondAttribute="centerX" type="user" id="zbg-Ae-HIE"/>
                         </constraints>
                     </view>
@@ -254,9 +260,67 @@
                     <view key="view" contentMode="scaleToFill" id="MG9-Ju-fNJ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":question" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" preferredMaxLayoutWidth="288" translatesAutoresizingMaskIntoConstraints="NO" id="aVO-tN-QMb">
+                                <rect key="frame" x="16" y="92" width="288" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="288" id="z5n-jO-erz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5O-YY-j03">
+                                <rect key="frame" x="132" y="485" width="57" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="answerQuestion:" destination="mNc-65-1rH" eventType="touchUpInside" id="J0Q-cO-v8a"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TIH-H2-6Pv">
+                                <rect key="frame" x="118" y="121" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="PsR-R2-End"/>
+                                    <constraint firstAttribute="height" constant="70" type="user" id="fOB-Aj-zFX"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Br8-2t-dAJ">
+                                <rect key="frame" x="16" y="199" width="288" height="274"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="LFl-If-W9I"/>
+                                    <constraint firstAttribute="height" constant="274" type="user" id="sR4-I9-Woo"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="mNc-65-1rH" id="rhl-bP-som"/>
+                                    <outlet property="delegate" destination="mNc-65-1rH" id="vx3-Af-mKm"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TIH-H2-6Pv" firstAttribute="top" secondItem="aVO-tN-QMb" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="1Bx-mb-GG6"/>
+                            <constraint firstAttribute="bottom" secondItem="S5O-YY-j03" secondAttribute="bottom" constant="20" symbolic="YES" type="user" id="5e8-mB-YUw"/>
+                            <constraint firstItem="Br8-2t-dAJ" firstAttribute="centerX" secondItem="TIH-H2-6Pv" secondAttribute="centerX" type="default" id="6gx-kS-EDz"/>
+                            <constraint firstItem="Br8-2t-dAJ" firstAttribute="top" secondItem="TIH-H2-6Pv" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="LSh-v3-KLz"/>
+                            <constraint firstItem="S5O-YY-j03" firstAttribute="top" secondItem="Br8-2t-dAJ" secondAttribute="bottom" constant="12" type="user" id="Mzi-9O-8qo"/>
+                            <constraint firstItem="Br8-2t-dAJ" firstAttribute="top" secondItem="MG9-Ju-fNJ" secondAttribute="top" constant="199" type="user" id="NbD-Ry-a7l"/>
+                            <constraint firstItem="aVO-tN-QMb" firstAttribute="centerX" secondItem="S5O-YY-j03" secondAttribute="centerX" type="default" id="P00-kH-eFe"/>
+                            <constraint firstItem="aVO-tN-QMb" firstAttribute="centerX" secondItem="MG9-Ju-fNJ" secondAttribute="centerX" type="default" id="RCx-7F-nny"/>
+                            <constraint firstItem="Br8-2t-dAJ" firstAttribute="leading" secondItem="MG9-Ju-fNJ" secondAttribute="leading" constant="73" id="q0i-jY-UJJ"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="questionImage" destination="TIH-H2-6Pv" id="Chf-3u-PCQ"/>
+                        <outlet property="questionTextLabel" destination="aVO-tN-QMb" id="bXU-lS-qTq"/>
+                        <outlet property="tableView" destination="Br8-2t-dAJ" id="F2L-jP-TYq"/>
                         <segue destination="7ee-Sh-HNh" kind="modal" identifier="showQuizResult" id="Wu8-sR-8fa"/>
                     </connections>
                 </viewController>
