--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -117,7 +117,7 @@
             <objects>
                 <viewController title="Quiz Demo Screen" id="ajk-5j-TJz" customClass="quizDemoViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tht-gO-gER">
-                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="A7K-nq-J8T">
@@ -138,15 +138,51 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtD-Cr-jfM">
+                                <rect key="frame" x="162" y="489" width="149" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <state key="normal" title="Check for available quiz">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="refreshAvailableQuiz:" destination="ajk-5j-TJz" eventType="touchUpInside" id="ejk-3o-e91"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wH1-tU-0kq">
+                                <rect key="frame" x="82" y="489" width="72" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="aCa-64-ZKY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="goBack:" destination="ajk-5j-TJz" eventType="touchUpInside" id="dAO-kE-KpH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="wH1-tU-0kq" firstAttribute="top" secondItem="HtD-Cr-jfM" secondAttribute="top" type="default" id="3BN-GU-rFo"/>
                             <constraint firstItem="N6h-2R-Zdc" firstAttribute="centerX" secondItem="A7K-nq-J8T" secondAttribute="centerX" type="default" id="4Cp-PR-xHu"/>
+                            <constraint firstItem="wH1-tU-0kq" firstAttribute="baseline" secondItem="HtD-Cr-jfM" secondAttribute="baseline" type="default" id="6mu-pu-hQP"/>
                             <constraint firstItem="vxT-yg-FW8" firstAttribute="top" secondItem="tht-gO-gER" secondAttribute="top" constant="94" id="7gz-sc-TeT"/>
                             <constraint firstItem="A7K-nq-J8T" firstAttribute="centerX" secondItem="tht-gO-gER" secondAttribute="centerX" type="default" id="Hyq-4s-NVS"/>
                             <constraint firstItem="A7K-nq-J8T" firstAttribute="top" secondItem="tht-gO-gER" secondAttribute="top" constant="242" id="c0c-B8-cgh"/>
+                            <constraint firstAttribute="bottom" secondItem="wH1-tU-0kq" secondAttribute="bottom" constant="16" id="dTP-Wa-aLb"/>
+                            <constraint firstItem="wH1-tU-0kq" firstAttribute="leading" secondItem="tht-gO-gER" secondAttribute="leading" constant="82" id="edq-ff-PJ2"/>
                             <constraint firstItem="A7K-nq-J8T" firstAttribute="centerX" secondItem="vxT-yg-FW8" secondAttribute="centerX" type="default" id="gaV-Bz-Zmz"/>
                             <constraint firstItem="N6h-2R-Zdc" firstAttribute="top" secondItem="A7K-nq-J8T" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="icR-Oy-lKd"/>
+                            <constraint firstItem="HtD-Cr-jfM" firstAttribute="leading" secondItem="wH1-tU-0kq" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="tPz-2p-I2v"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DCW-tB-Jac"/>
@@ -168,24 +204,6 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ieo-lG-fhO">
-                                <rect key="frame" x="228" y="497" width="76" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="31" id="RIb-5c-lV3"/>
-                                    <constraint firstAttribute="width" constant="76" id="eQG-bF-kuc"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
-                                <state key="normal" title="Reload Quiz">
-                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="ajk-5j-TJz" kind="modal" id="zf7-0S-MRb"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":quizDescription" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cVp-y3-Hgr">
                                 <rect key="frame" x="17" y="272" width="288" height="21"/>
                                 <constraints>
@@ -231,8 +249,6 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="H8C-Au-prY" firstAttribute="top" secondItem="EH8-yy-uaV" secondAttribute="top" constant="131" type="user" id="2gN-W8-ycN"/>
-                            <constraint firstAttribute="bottom" secondItem="ieo-lG-fhO" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="3Gs-LQ-wf3"/>
-                            <constraint firstAttribute="trailing" secondItem="ieo-lG-fhO" secondAttribute="trailing" constant="16" id="8iE-Tj-zp5"/>
                             <constraint firstItem="VMF-ma-mmP" firstAttribute="top" secondItem="EH8-yy-uaV" secondAttribute="top" constant="94" id="Cr4-Of-6bE"/>
                             <constraint firstItem="uyt-Wk-Ecc" firstAttribute="centerX" secondItem="cVp-y3-Hgr" secondAttribute="centerX" type="default" id="Y7Z-Hi-WJy"/>
                             <constraint firstItem="cVp-y3-Hgr" firstAttribute="top" secondItem="H8C-Au-prY" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="eNV-Uw-uj0"/>
@@ -389,6 +405,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="goBackToMainMenu:" destination="7ee-Sh-HNh" eventType="touchUpInside" id="rcC-bT-3WN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -604,7 +623,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="ajk-5j-TJz" kind="push" identifier="showQuizDemoScreen" id="d1I-h0-mWe"/>
+                                    <segue destination="ajk-5j-TJz" kind="modal" identifier="showQuizDemoScreen" id="d1I-h0-mWe"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fB-1z-r8D">
@@ -646,7 +665,4 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="d1I-h0-mWe"/>
-    </inferredMetricsTieBreakers>
 </document>
